# Flowex

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  OVERVIEW.md  PRD.json  PROGRESS.md  PROMPT_Build.md  PROMPT_Plan.md  README.md  SECURITY_AUDIT.md  docker-compose.yml  loop.sh  package-lock.json  package.json
backend/: .dockerignore  .env.example  Dockerfile  Procfile  nixpacks.toml  pyproject.toml  railway.json  requirements-prod.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_is_flagged_to_symbols.py  003_add_beta_feedback_table.py  004_add_organization_invites_table.py  005_add_audit_logs_table.py  006_add_data_retention_fields.py  007_add_project_members_table.py  008_add_security_breaches_table.py
backend/app/: __init__.py  main.py
backend/app/core/: celery_app.py  config.py  database.py  deps.py  logging.py  oauth_state.py  rate_limiting.py  security.py  security_headers.py
backend/app/ml/: __init__.py  inference.py  ocr_pipeline.py
backend/app/models/: __init__.py  audit_log.py  beta_feedback.py  cloud_connection.py  drawing.py  line.py  organization.py  organization_invite.py  project.py  project_member.py  symbol.py  (+3 more)
backend/tests/: conftest.py  test_audit_logs.py  test_auth.py  test_benchmarks.py  test_breaches.py  test_cloud.py  test_drawings.py  test_exports.py  test_feedback.py  test_health.py  test_ml_pipeline.py  test_oauth_state.py  test_organizations.py  test_pdf_processing.py  test_projects.py  test_retention.py  test_security_headers.py  test_users.py
(+151 files in other folders)
